media add overflow-x for size 784*504 and corrected some margin

--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,7 @@ body{
     padding: 10px 8px;
     margin-left: 16px;
 }
+
 .main-info__list-item{
     /* margin-bottom: 15px;
     margin-top: 9px;*/
@@ -253,13 +254,13 @@ body{
         flex-direction: row;
 
     }
-    .main-info__list-nav--change-main-column{
+    /*.main-info__list-nav--change-main-column{
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
         
         
-    }
+    } */
     .main-info__main-picture--change-size{
         height: 208px;
         width: 360px;
@@ -271,7 +272,7 @@ body{
         max-height: 160px;
     }
     .main-info__nav--change-height{
-        overflow: visible;
+        /*overflow: visible;*/
         height: auto;
     }
     
@@ -336,7 +337,7 @@ body{
      
     }
     .footer{
-        height: 49px;
+        height: 20px;
         
         
     }
@@ -364,6 +365,9 @@ body{
     
     .header-wrapper__popup-list--visible{
         display: none;
+    }
+    .main-info__item--margin-top{
+        margin-top: 4px;
     }
   
 }
